--- a/src/main/resources/static/product_detail.html
+++ b/src/main/resources/static/product_detail.html
@@ -54,10 +54,10 @@
         <nav class="navbar navbar-default" id="mainNav" style="float: right">
           <div id="navbar" class="navbar-collapse collapse" style="float: right">
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="http://localhost:8080/index.html">Home</a></li>
+              <li class="active"><a href="http://93.188.162.82:8080/index.html">Home</a></li>
               <li><a href="#menu">Menu</a></li>
               <li><a href="#reservation">Đơn hàng</a></li>
-              <li><a href="http://localhost:8080/login.html">đăng nhập</a></li>
+              <li><a href="http://93.188.162.82:8080/login.html">đăng nhập</a></li>
             </ul>
           </div>
         </nav>
