--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -54,7 +54,7 @@
         <nav class="navbar navbar-default" id="mainNav" style="float: right">
           <div id="navbar" class="navbar-collapse collapse" style="float: right">
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="http://localhost:8080/index.html">Home</a></li>
+              <li class="active"><a href="http://93.188.162.82:8080/index.html">Home</a></li>
             </ul>
           </div>
         </nav>
