--- a/src/main/resources/static/management.html
+++ b/src/main/resources/static/management.html
@@ -116,18 +116,10 @@
 </div>
 
 <div class="container" style="margin-top: 100px;background: white;width: 800px;height: 500px;font-size: 30px">
-  <h1 style="text-align: center;padding-top: 50px">
-    phản hồi khách hàng
+  <h1 class="block-title text-center wow fadeIn" style="text-align: center;
+  padding-top: 50px;" data-wow-duration="1s" data-wow-delay="0.1s">
+    Phản hồi khách hàng
   </h1>
-  <ul>
-    <li> đơn 1: ngày giờ tháng năm </li>
-    <li> đơn 12: ngày giờ tháng năm </li>
-    <li> đơn 13: ngày giờ tháng năm </li>
-    <li> đơn 14: ngày giờ tháng năm </li>
-    <li> đơn 15: ngày giờ tháng năm </li>
-    <li> đơn 16: ngày giờ tháng năm </li>
-    <li> đơn 17: ngày giờ tháng năm </li>
-  </ul>
 </div>
 
 <div id="footer" class="footer-main">
